--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,27 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-869.2KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.68MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.57MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.93MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.74MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-490.9KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-528.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-226.4KB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇳 中国-227.4KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇫🇷 法国-985.2KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇯🇵 日本-824.1KB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-824.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-824.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-824.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +36,20 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-824.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-824.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-824.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +65,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-869.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-490.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-824.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
