--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,66 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-1.25MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-742.2KB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
-  - {name: 🇺🇸 美国-441.0KB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.22MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.16MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.50MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-581.1KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇭 瑞士-654.3KB/s(Youtube:不良林), server: 185.126.116.125, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-742.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇫🇷 法国-581.1KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-654.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-742.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇫🇷 法国-581.1KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-654.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-742.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇫🇷 法国-581.1KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-654.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-742.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-742.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇫🇷 法国-581.1KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-654.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-742.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇫🇷 法国-581.1KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-654.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-742.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇫🇷 法国-581.1KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-654.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -80,9 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-742.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇫🇷 法国-581.1KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-654.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
