--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.96MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.82MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.25MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-541.3KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇭🇰 香港-444.3KB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
-  - {name: 🇬🇧 英国-337.6KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.36MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.34MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.64MB/s(Youtube:不良林), server: 78.46.244.34, port: 33655, type: vmess, uuid: b41303b4-e2c8-4771-cb6c-ef62244a7621, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-301.9KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.96MB/s(Youtube:不良林), server: 172.96.192.100, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
+  - {name: 🇭🇰 香港-9.72MB/s(Youtube:不良林), server: cn-hk-az-2.okzdns.com, port: 3389, type: vmess, uuid: 35a3b37b-9fb4-4b0c-91b4-2b3e738af930, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: cn-hk-az-2.okzdns.com}}
+  - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-7.92MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.37MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.36MB/s(Youtube:不良林), server: 213.183.59.211, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇨🇳 中国-915.1KB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12229, type: vmess, uuid: 9ea70d57-9cb6-3bd0-ae41-5601e516dcc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-435.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇳🇱 荷兰-835.3KB/s(Youtube:不良林), server: 213.183.59.211, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇺🇸 美国-352.1KB/s(Youtube:不良林), server: 45.61.174.36, port: 31325, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-444.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-337.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-915.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-435.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-835.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-444.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-337.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-915.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-435.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-835.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-444.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-337.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-915.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-435.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-835.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-444.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.72MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-444.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-337.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-915.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-435.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-835.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-444.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-337.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-915.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-435.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-835.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-444.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-337.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-915.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-435.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-835.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-444.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-337.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-915.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-435.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-835.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
